--- a/all/themes/pixelgarage/less/header.less
+++ b/all/themes/pixelgarage/less/header.less
@@ -32,7 +32,7 @@ header#navbar {
   z-index: 5;
 
   a.logo {
-    margin: 10px 20px;
+    margin: 10px 0 10px 20px;
     padding: 0;
     outline: none;
 
@@ -223,7 +223,7 @@ header#navbar {
               width: auto;
 
               a {
-                padding: 7px 30px 7px 10px;
+                padding: 7px 25px 7px 10px;
                 font-size: 16px;
               }
             }
@@ -265,7 +265,7 @@ header#navbar {
           ul.menu {
             li {
               a {
-                padding: 7px 40px 7px 10px;
+                padding: 7px 35px 7px 10px;
                 font-size: 18px;
               }
             }
