--- a/all/themes/pixelgarage/less/pxlComponents/pxlComponents.less
+++ b/all/themes/pixelgarage/less/pxlComponents/pxlComponents.less
@@ -24,6 +24,7 @@
 
 // views
 @import "view-banners";
+@import "view-call2action";
 @import "view-segment-pages";
 @import "view-locations";
 @import "view-contacts";
