--- a/all/themes/pixelgarage/less/pxlComponents/view-call2action.less
+++ b/all/themes/pixelgarage/less/pxlComponents/view-call2action.less
@@ -103,7 +103,7 @@
                     #pxl-mixins.border-radius(3px);
                     background: @pxl-color-bg-button;
 
-                    &:hover, &:focus {
+                    &:hover {
                       border: 1px solid #fff;
                       background: rgba(0,0,0,0.0);
                     }
