- search exposed form added - styling improved - db updated

--- a/all/themes/pixelgarage/less/mixins/general.less
+++ b/all/themes/pixelgarage/less/mixins/general.less
@@ -18,4 +18,49 @@
     padding: 0;
   }
 
+  //
+  // Views pager
+  //
+  .view-pager(@fsize: @font-size-base; @color: @text-color; @hcolor: @text-color; @border: none) {
+    ul.pagination {
+      display: inline-block;
+      margin: 20px 0;
+      text-align: center;
+
+      li {
+        a, span {
+          font-family: @pxl-text-font;
+          font-size: @fsize;
+          text-decoration: none;
+          color: @color;
+          border: @border;
+          background: none;
+        }
+
+        &:hover, &:focus, &.active {
+          a, span {
+            color: @hcolor;
+            text-decoration: none;
+          }
+        }
+
+        &.pager-first,
+        &.pager-last {
+
+        }
+
+        &.prev,
+        &.next {
+
+        }
+
+        &.ellipsis {
+          span {
+
+          }
+        }
+      }
+    }
+  }
+
 }
