--- a/all/themes/pixelgarage/less/pxlComponents/block-meta-menu-level-2.less
+++ b/all/themes/pixelgarage/less/pxlComponents/block-meta-menu-level-2.less
@@ -28,7 +28,7 @@
         font-family: @pxl-text-font;
         font-size: 16px;
         line-height: 1;
-        color: @pxl-color-footer;
+        color: @pxl-color-gray-text;
         #pxl-mixins.border-radius(3px);
         border: none;
         background-color: @pxl-color-hso-gray;
@@ -38,7 +38,7 @@
       &.active {
         a {
           color: #fff;
-          background-color: @pxl-color-footer;
+          background-color: @pxl-color-gray-text;
         }
       }
     }
