--- a/all/themes/pixelgarage/less/pxlComponents/block-socials.less
+++ b/all/themes/pixelgarage/less/pxlComponents/block-socials.less
@@ -152,8 +152,8 @@
 
       &:hover {
         //#pxl-mixins.border-radius(50%);
-        //border: 2px solid @pxl-color-footer;
-        color: @pxl-color-footer;
+        //border: 2px solid @pxl-color-gray-text;
+        color: @pxl-color-gray-text;
       }
 
     }
