--- a/all/themes/pixelgarage/less/pxlComponents/node-course.less
+++ b/all/themes/pixelgarage/less/pxlComponents/node-course.less
@@ -43,10 +43,11 @@
 
               th, td {
                 display: block;
-                padding: 10px 10px 10px 0;
+                padding: 15px 10px 15px 0;
                 width: 100% !important;
                 font-family: @pxl-text-font-medium;
                 font-size: @font-size-small;
+                color: @pxl-color-gray-border;
                 vertical-align: top;
               }
               td {
