--- a/all/themes/pixelgarage/less/pxlComponents/node-webform.less
+++ b/all/themes/pixelgarage/less/pxlComponents/node-webform.less
@@ -8,7 +8,7 @@
 @webform-inline-input-width: 58.333333%;
 
 @webform-color-label: @text-color;
-@webform-color-border: @pxl-color-hso-gray;
+@webform-color-border: @pxl-color-gray-border-light;
 @webform-color-border-active: @brand-primary;
 @webform-color-input: @text-color;
 @webform-bg-color-input: #fff;
