--- a/all/themes/pixelgarage/less/pxlComponents/pxlComponents.less
+++ b/all/themes/pixelgarage/less/pxlComponents/pxlComponents.less
@@ -14,6 +14,7 @@
 @import "block-language";
 @import "block-meta-menu-level-2";
 @import "block-menu-blocks";
+@import "block-exposed-search-course-times";
 
 // nodes
 @import "node-page";
@@ -33,3 +34,6 @@
 @import "view-course-times";
 @import "view-team";
 @import "view-bildungsnavigator";
+
+// widgets
+@import "date-popup";
