--- a/all/themes/pixelgarage/less/pxlComponents/view-call2action.less
+++ b/all/themes/pixelgarage/less/pxlComponents/view-call2action.less
@@ -121,7 +121,7 @@
                 font-size: 18px;
                 line-height: 30px;
                 text-align: center;
-                color: @pxl-color-footer;
+                color: @pxl-color-gray-text;
               }
             }
           }
