--- a/all/themes/pixelgarage/less/pxlComponents/view-contacts.less
+++ b/all/themes/pixelgarage/less/pxlComponents/view-contacts.less
@@ -40,9 +40,9 @@
             font-family: @pxl-text-font;
             font-size: 14px;
             line-height: 1;
-            color: @pxl-color-footer;
+            color: @pxl-color-gray-text;
             #pxl-mixins.border-radius(3px);
-            border: 1px solid @pxl-color-footer;
+            border: 1px solid @pxl-color-gray-text;
             background-color: #fff;
           }
 
@@ -50,7 +50,7 @@
           &.active {
             a, span {
               color: #fff;
-              background-color: @pxl-color-footer;
+              background-color: @pxl-color-gray-text;
             }
           }
         }
