--- a/all/themes/pixelgarage/less/pxlComponents/view-locations.less
+++ b/all/themes/pixelgarage/less/pxlComponents/view-locations.less
@@ -48,16 +48,16 @@
             font-family: @pxl-text-font;
             font-size: 16px;
             line-height: 1;
-            color: @pxl-color-footer;
+            color: @pxl-color-gray-text;
             #pxl-mixins.border-radius(3px);
-            border: 1px solid @pxl-color-footer;
+            border: 1px solid @pxl-color-gray-text;
           }
 
           &:hover,
           &.active {
             a {
               color: #fff;
-              background-color: @pxl-color-footer;
+              background-color: @pxl-color-gray-text;
             }
           }
         }
@@ -94,7 +94,7 @@
               height: 0;
               border-top: (@pxl-li-vertical-height / 2) solid transparent;
               border-bottom: (@pxl-li-vertical-height / 2) solid transparent;
-              border-left: @pxl-arrow-width solid @pxl-color-footer;
+              border-left: @pxl-arrow-width solid @pxl-color-gray-text;
             }
           }
         }
@@ -159,7 +159,7 @@
           margin: 0 0 0 -6.8%;
           width: 59%;
           height: (@pxl-li-vertical-height * @pxl-location-count);
-          border: 1px solid @pxl-color-footer-border;
+          border: 1px solid @pxl-color-gray-border;
 
           .tab-pane {
             font-size: 14px;
