--- a/all/themes/pixelgarage/less/variable-overrides.less
+++ b/all/themes/pixelgarage/less/variable-overrides.less
@@ -15,12 +15,13 @@
 @pxl-color-hso-ex: rgb(177, 168, 149);
 @pxl-color-hso-gray: rgb(235,235,235);
 
-@pxl-color-bg-button: #FA5050;
-@pxl-border-color: #ccc;
+@pxl-color-bg-button: #ff5353;
+@pxl-border-color: #c9c9c9;
 
-@pxl-color-footer: #999;
-@pxl-color-footer-border: #666;
-@pxl-color-footer-bg: #39393E;
+@pxl-color-gray-text: #929295;
+@pxl-color-gray-border-light: #c9c9c9;
+@pxl-color-gray-border: #6d6e72;
+@pxl-color-gray-dark: #494a4f;
 
 //== Scaffolding
 //
