--- a/all/themes/pixelgarage/less/footer.less
+++ b/all/themes/pixelgarage/less/footer.less
@@ -36,7 +36,7 @@
       font-size: 16px;
       line-height: 1;
       text-align: left;
-      color: @pxl-color-footer;
+      color: @pxl-color-gray-text;
       box-shadow: none;
       #pxl-mixins.border-radius(4px);
       border: none;
@@ -66,10 +66,10 @@
       outline: none;
       #pxl-mixins.border-radius(4px);
       border: none;
-      background-color: @pxl-color-footer;
+      background-color: @pxl-color-gray-text;
 
       &:hover, &:focus {
-        color: @pxl-color-footer;
+        color: @pxl-color-gray-text;
         border: none;
         background: #eee;
       }
@@ -112,7 +112,7 @@
   margin: 0;
   padding: 0;
   border: none;
-  background-color: @pxl-color-footer-bg;
+  background-color: @pxl-color-gray-dark;
 
   .container {
     .region-footer {
@@ -162,7 +162,7 @@
         margin-top: 30px;
         padding: 30px 0;
         width: 100%;
-        border-top: 1px solid @pxl-color-footer;
+        border-top: 1px solid @pxl-color-gray-text;
 
         .menu-name-menu-footer-menu {
           ul.menu {
@@ -175,8 +175,8 @@
                 font-family: @pxl-text-font;
                 font-size: 16px;
                 line-height: 1;
-                color: @pxl-color-footer;
-                border-right: 1px solid @pxl-color-footer-border;
+                color: @pxl-color-gray-text;
+                border-right: 1px solid @pxl-color-gray-border;
 
                 &:hover,
                 &.active {
@@ -210,6 +210,24 @@
                 // copyright node block
                 .field-name-body {
                   .field-item {
+                    margin: 10px 0 0;
+                    font-family: @pxl-text-font;
+                    font-size: 14px;
+                    color: @text-color;
+                    line-height: 1;
+
+                    div {
+                      a {
+                        display: block;
+                        padding: 10px 0;
+                        border-top: 1px solid @text-color;
+
+                        img {
+                          max-width: 100%;
+                        }
+                      }
+                    }
+
                   }
                 }
               }
@@ -229,7 +247,9 @@
                       display: inline-block;
 
                       img {
+                        margin: 10px !important;
                         max-height: 60px;
+                        max-width: 120px;
                         width: auto;
                       }
                     }
