--- a/all/themes/pixelgarage/less/header.less
+++ b/all/themes/pixelgarage/less/header.less
@@ -68,7 +68,7 @@ header#navbar {
 
         span.glyphicon {
           font-size: 30px;
-          color: @pxl-color-footer-bg;
+          color: @pxl-color-gray-dark;
         }
 
         &:hover, &:focus {
@@ -102,7 +102,7 @@ header#navbar {
 
         span.fa {
           font-size: 30px;
-          color: @pxl-color-footer-bg;
+          color: @pxl-color-gray-dark;
         }
 
         &:hover, &:focus {
