--- a/all/themes/pixelgarage/less/pxlComponents/block-menu-blocks.less
+++ b/all/themes/pixelgarage/less/pxlComponents/block-menu-blocks.less
@@ -33,7 +33,7 @@
         font-family: @pxl-text-font;
         font-size: 16px;
         line-height: 1;
-        color: @pxl-color-footer;
+        color: @pxl-color-gray-text;
         #pxl-mixins.border-radius(3px);
         border: none;
         background-color: @pxl-color-hso-gray;
@@ -43,7 +43,7 @@
       &.active {
         a, span {
           color: #fff;
-          background-color: @pxl-color-footer;
+          background-color: @pxl-color-gray-text;
         }
       }
     }
