--- a/all/themes/pixelgarage/less/pxlComponents/node-location.less
+++ b/all/themes/pixelgarage/less/pxlComponents/node-location.less
@@ -138,7 +138,7 @@
               font-family: @pxl-text-font-light;
               font-size: 12px;
               color: @text-color;
-              border-bottom: 1px solid @pxl-color-footer-border;
+              border-bottom: 1px solid @pxl-color-gray-border;
 
               p {
                 margin: 0;
