--- a/all/themes/pixelgarage/less/pxlComponents/view-courses.less
+++ b/all/themes/pixelgarage/less/pxlComponents/view-courses.less
@@ -50,7 +50,7 @@
           margin: 30px 0 0;
           padding: 10px 0;
           font-family: @pxl-text-font-medium;
-          font-size: @font-size-base;
+          font-size: @font-size-base + 2;
           color: @text-color;
           line-height: 1;
           border-top: 1px solid @pxl-border-color;
@@ -82,7 +82,7 @@
               width: 100%;
               padding: 10px 10px 12px;
               font-size: 14px;
-              color: @text-color-light;
+              color: @pxl-color-gray-text;
               text-decoration: none;
             }
           }
