--- a/all/themes/pixelgarage/less/variable-overrides.less
+++ b/all/themes/pixelgarage/less/variable-overrides.less
@@ -95,8 +95,8 @@
 @normal:  ~"screen and (min-width: @{screen-md-min})";
 @wide:    ~"screen and (min-width: @{screen-lg-min})";
 
-// special break for menu items
-@menu-break: ~"screen and (min-width: 600px)";
+// special breakpoint for header items
+@header-breakpoint: ~"screen and (min-width: 640px)";
 
 // Media queries stacked
 @tablet-only:  ~"screen and (min-width: @{screen-sm-min}) and (max-width: @{screen-sm-max})";
