--- a/all/themes/pixelgarage/less/footer.less
+++ b/all/themes/pixelgarage/less/footer.less
@@ -31,10 +31,10 @@
 
     input.form-text {
       padding: 10px;
-      height: auto;
+      height: 36px;
       font-family: @pxl-text-font-light;
       font-size: 16px;
-      line-height: 1;
+      //line-height: 1;
       text-align: left;
       color: @pxl-color-gray-text;
       box-shadow: none;
@@ -57,9 +57,10 @@
       display: inline-block;
       margin: 0;
       padding: 10px 20px;
+      height: 36px;
       font-family: @pxl-text-font;
       font-size: 16px;
-      line-height: 1;
+      //line-height: 1;
       letter-spacing: 1.5px;
       text-transform: capitalize;
       color: #eee;
