--- a/all/themes/pixelgarage/less/mixins/general.less
+++ b/all/themes/pixelgarage/less/mixins/general.less
@@ -19,6 +19,14 @@
   }
 
   //
+  // Select box appearence
+  .no-appearance() {
+    -webkit-appearance:none;
+    -moz-appearance:none;
+    appearance:none;
+  }
+
+  //
   // Views pager
   //
   .view-pager(@fsize: @font-size-base; @color: @text-color; @hcolor: @text-color; @border: none) {
