--- a/all/themes/pixelgarage/less/pxlComponents/date-popup.less
+++ b/all/themes/pixelgarage/less/pxlComponents/date-popup.less
@@ -15,14 +15,18 @@
 // -------------------------
 #ui-datepicker-div {
   position: relative;
-  margin: -30px 0 0;
+  margin: 0;
   font-family: @pxl-text-font-light;
   font-size: @font-size-base;
   color: @pxl-color-gray-text;
   border: 1px solid @pxl-border-color;
   #pxl-mixins.border-radius(0);
   background-color: #fff;
-  z-index: 100 !important;
+  z-index: @zindex-popover !important;
+
+  .admin-menu & {
+    margin: -29px 0 0;
+  }
 
   .ui-state-default,
   .ui-widget-header .ui-state-default,
